fix: update services text with new copy for both mentorship programs

--- a/index.html
+++ b/index.html
@@ -138,23 +138,27 @@
                         <div class="servicio-icon">
                             <i class="fas fa-bullhorn"></i>
                         </div>
-                        <h3 class="servicio-name">Mentoría: Creación de Marca Personal</h3>
+                        <h3 class="servicio-name">Mentoría de Marca y Comunidad Digital</h3>
                     </div>
                     <div class="servicio-body">
                         <ul class="servicio-features">
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Convierte tu conocimiento clínico en una comunidad digital con audiencia real y en
-                                crecimiento, sin pagar publicidad.
+                                <strong>Perfil de Élite:</strong> Diseñado para estudiantes y profesionales de la
+                                psicología que buscan transformar su conocimiento clínico en una comunidad digital
+                                de alto impacto.
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Aplica el mismo método orgánico con el que construí mi comunidad digital desde cero.
+                                <strong>Metodología Orgánica:</strong> Implementa el sistema con el que escalé de 0
+                                a 100k seguidores sin inversión publicitaria ni equipos externos, bajo un marco
+                                profesional y ético.
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Crea contenido que posicione tu nombre como referente y atraiga pacientes o clientes
-                                de forma natural.
+                                <strong>Expansión de Alcance:</strong> Capitaliza tu conocimiento, expandiendo tu
+                                alcance no solo a la consulta individual, sino también a diferentes productos
+                                digitales de autoridad.
                             </li>
                         </ul>
                     </div>
@@ -170,22 +174,25 @@
                         <div class="servicio-icon">
                             <i class="fas fa-dumbbell"></i>
                         </div>
-                        <h3 class="servicio-name">Mentoría: Entrenamiento Asertivo</h3>
+                        <h3 class="servicio-name">Entrenamiento en Asertividad y Mentalidad</h3>
                     </div>
                     <div class="servicio-body">
                         <ul class="servicio-features">
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Domina el arte de decir lo que piensas sin miedo y con precisión quirúrgica.
+                                <strong>Control de Vida:</strong> Diseñada para quienes desean tener el control total
+                                de su vida, su comunicación y su toma de decisiones para vivir mejor (todo público).
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Construye una mentalidad que no se quiebre ante la presión — con ciencia, no con
-                                frases motivacionales.
+                                <strong>Disciplina Real:</strong> Desarrolla disciplina estratégica basada en
+                                neurociencia y psicología conductual aplicada; lejos de frases motivacionales y la
+                                autoayuda superficial.
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Toma decisiones con claridad y convicción, eliminando la duda y la impulsividad.
+                                <strong>Precisión Técnica:</strong> Domina el arte de decir lo que piensas sin miedo
+                                con la precisión técnica de la psicología.
                             </li>
                         </ul>
                         <p class="servicio-note">
